--- a/index.html
+++ b/index.html
@@ -6,52 +6,30 @@
     <title>Game Store</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="bg-dark text-white p-3 text-center">
-        <h1>Game Store</h1>
+    <header class="bg-dark text-white p-3">
+        <div class="container header-container">
+            <h1 class="text-center flex-grow-1">Game Store</h1>
+            <button class="toggle-icon" id="toggleMode">🌙</button>
+        </div>
     </header>
     
     <div class="container mt-4">
         <input type="text" id="search" class="form-control mb-3" placeholder="Search for a game...">
+        <div class="text-center mb-3">
+            <button class="btn btn-outline-light category-btn" onclick="filterCategory('All')">All</button>
+            <button class="btn btn-outline-light category-btn" onclick="filterCategory('Action')">Action</button>
+            <button class="btn btn-outline-light category-btn" onclick="filterCategory('Adventure')">Adventure</button>
+            <button class="btn btn-outline-light category-btn" onclick="filterCategory('Sports')">Sports</button>
+        </div>
         <div class="row" id="game-list">
             <!-- Games will be inserted here dynamically -->
         </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        const games = [
-            { name: "Cyber Warrior", price: "$29.99", image: "https://via.placeholder.com/200" },
-            { name: "Space Explorer", price: "$19.99", image: "https://via.placeholder.com/200" },
-            { name: "Zombie Attack", price: "$24.99", image: "https://via.placeholder.com/200" }
-        ];
-
-        function displayGames(filter = "") {
-            let gameList = document.getElementById("game-list");
-            gameList.innerHTML = "";
-            games.filter(game => game.name.toLowerCase().includes(filter.toLowerCase()))
-                .forEach(game => {
-                    gameList.innerHTML += `
-                        <div class="col-md-4 mb-3">
-                            <div class="card">
-                                <img src="${game.image}" class="card-img-top" alt="${game.name}">
-                                <div class="card-body">
-                                    <h5 class="card-title">${game.name}</h5>
-                                    <p class="card-text">Price: ${game.price}</p>
-                                    <button class="btn btn-primary">Buy Now</button>
-                                </div>
-                            </div>
-                        </div>
-                    `;
-                });
-        }
-
-        document.getElementById("search").addEventListener("input", (e) => {
-            displayGames(e.target.value);
-        });
-        
-        displayGames();
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
